--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row gy-4 justify-content-center justify-content-lg-between">
           <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Delicious Halal Thai Food<br>Located in Melaka</h1>
+            <h1 data-aos="fade-up">Delicious Halal Thai-Style Food<br>Located in Melaka</h1>
             <!-- <p data-aos="fade-up" data-aos-delay="100">We are team of talented designers making websites with Bootstrap</p> -->
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
               <a href="#book-a-table" class="btn-get-started">Book a Table Now</a>
