--- a/public/require_login.html
+++ b/public/require_login.html
@@ -93,7 +93,7 @@
                         </form>
                         <p id="message"></p>
                     </div>
-                    <script src="js/app.js" type="module"></script>
+                    <script src="js/formActions.js" type="module"></script>
                 </div>
             </div>
         </section>
