--- a/public/require_login.html
+++ b/public/require_login.html
@@ -2,47 +2,45 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Bookings</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manage Bookings</title>
 
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-    <!-- Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 
 <body class="index-page">
-    <header id="header" class="header d-flex align-items-center sticky-top">
-        <div class="container position-relative d-flex align-items-center justify-content-between">
+  <header id="header" class="header d-flex align-items-center sticky-top">
+    <div class="container position-relative d-flex align-items-center justify-content-between">
 
-            <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
-                <h1 class="sitename">Seri Padi De Cabin</h1>
-                <span>.</span>
-            </a>
+      <a href="/" class="logo d-flex align-items-center me-auto me-xl-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <h1 class="sitename">Seri Padi De Cabin</h1>
+        <span>.</span>
+      </a>
 
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="/#hero">Home<br></a></li>
-                    <li><a href="/#about">About</a></li>
-                    <li><a href="/#menu">Menu</a></li>
-                    <!-- <li><a href="#events">Events</a></li> -->
-                    <!-- <li><a href="#chefs">Chefs</a></li> -->
-                    <!-- <li><a href="#gallery">Gallery</a></li> -->
-                    <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="/#hero">Home<br></a></li>
+          <li><a href="/#about">About</a></li>
+          <li><a href="/#menu">Menu</a></li>
+          <!-- <li><a href="#events">Events</a></li> -->
+          <!-- <li><a href="#chefs">Chefs</a></li> -->
+          <!-- <li><a href="#gallery">Gallery</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -59,138 +57,137 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
-                    <li><a href="/#contact">Contact</a></li>
-                    <li><a href="/users/bookings_page" class="active">My Bookings</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav>
+          <li><a href="/#contact">Contact</a></li>
+          <li><a href="/users/bookings_page" class="active">My Bookings</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
 
-            <a class="btn-getstarted" href="/#book-a-table">Login</a>
+      <a class="btn-getstarted" href="/#book-a-table">Login</a>
+
+    </div>
+  </header>
+
+  <main class="main">
+    <section id="login" class="section">
+      <div class="container">
+        <div class="row gy-4">
+
+          <div class="col-12 col-lg-8">
+            <p><strong>Register an account with us.</strong></p>
+            <form id="registerForm" method="POST">
+              <div class="col-lg-8">
+                <label class="mb-2" for="name">Name</label>
+                <input class="form-control" type="text" id="name" name="name" required>
+              </div>
+              <div class="col-lg-8">
+                <label class="mb-2" for="tel_no">Phone Number</label>
+                <input class="form-control" type="tel" id="tel_no" name="tel_no" required>
+              </div>
+              <div class="col-lg-8">
+                <label class="mb-2" for="email">Email</label>
+                <input class="form-control" type="email" id="email" name="email" required>
+              </div>
+              <div class="col-lg-8">
+                <label class="mb-2" for="reg_username">Username</label>
+                <input class="form-control" type="text" id="reg_username" name="username" required>
+              </div>
+              <div class="col-lg-8">
+                <label class="mb-2" for="reg_password">Password</label>
+                <input class="form-control" type="password" id="reg_password" name="password" required>
+              </div>
+              <button class="book-a-table-login" type="submit">Register</button>
+              <p id="registerMessage"></p>
+            </form>
+          </div>
+          <div class="col-12 col-lg-4">
+            <p><strong>Already have an account? You may login here.</strong></p>
+            <div class="login-container">
+              <form id="loginForm">
+                <div class="col-lg-6 form-group">
+                  <label class="mb-2" for="username">Username:</label>
+                  <input type="text" id="username" name="username" class="form-control" required>
+                </div>
+                <div class="col-lg-6 form-group">
+                  <label class="mb-2" for="password">Password:</label>
+                  <input type="password" id="password" name="password" class="form-control" required>
+                </div>
+                <div>
+                  <button class="book-a-table-login" type="submit">Login</button>
+                </div>
+              </form>
+              <p id="message"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer id="footer" class="footer">
+
+    <div class="container">
+      <div class="row gy-3">
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-geo-alt icon"></i>
+          <div class="address">
+            <h4>Address</h4>
+            <p>Lot 1023 Mukim Kandang, Jalan Bukit Lintang, </p>
+            <p>75460 Ayer Molek, Melaka</p>
+            <p></p>
+          </div>
 
         </div>
-    </header>
 
-    <main class="main">
-        <section id="login" class="section">
-            <div class="container">
-                <div class="row gy-4">
-
-                    <div class="col-12 col-lg-8">
-                        <p><strong>Register an account with us.</strong></p>
-                        <form id="registerForm" method="POST">
-                            <div class="col-lg-8">
-                                <label class="mb-2" for="name">Name</label>
-                                <input class="form-control" type="text" id="name" name="name" required>
-                            </div>
-                            <div class="col-lg-8">
-                                <label class="mb-2" for="tel_no">Phone Number</label>
-                                <input class="form-control" type="tel" id="tel_no" name="tel_no" required>
-                            </div>
-                            <div class="col-lg-8">
-                                <label class="mb-2" for="email">Email</label>
-                                <input class="form-control" type="email" id="email" name="email" required>
-                            </div>
-                            <div class="col-lg-8">
-                                <label class="mb-2" for="reg_username">Username</label>
-                                <input class="form-control" type="text" id="reg_username" name="username" required>
-                            </div>
-                            <div class="col-lg-8">
-                                <label class="mb-2" for="reg_password">Password</label>
-                                <input class="form-control" type="password" id="reg_password" name="password" required>
-                            </div>
-                            <button class="book-a-table-login" type="submit">Register</button>
-                            <p id="registerMessage"></p>
-                        </form>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <p><strong>Already have an account? You may login here.</strong></p>
-                        <div class="login-container">
-                            <form id="loginForm">
-                                <div class="col-lg-6 form-group">
-                                    <label class="mb-2" for="username">Username:</label>
-                                    <input type="text" id="username" name="username" class="form-control" required>
-                                </div>
-                                <div class="col-lg-6 form-group">
-                                    <label class="mb-2" for="password">Password:</label>
-                                    <input type="password" id="password" name="password" class="form-control" required>
-                                </div>
-                                <div>
-                                    <button class="book-a-table-login" type="submit">Login</button>
-                                </div>
-                            </form>
-                            <p id="message"></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer id="footer" class="footer">
-
-        <div class="container">
-            <div class="row gy-3">
-                <div class="col-lg-3 col-md-6 d-flex">
-                    <i class="bi bi-geo-alt icon"></i>
-                    <div class="address">
-                        <h4>Address</h4>
-                        <p>Lot 1023 Mukim Kandang, Jalan Bukit Lintang, </p>
-                        <p>75460 Ayer Molek, Melaka</p>
-                        <p></p>
-                    </div>
-
-                </div>
-
-                <div class="col-lg-3 col-md-6 d-flex">
-                    <i class="bi bi-telephone icon"></i>
-                    <div>
-                        <h4>Contact</h4>
-                        <p>
-                            <strong>Phone:</strong> <span>017-324 4866</span><br>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6 d-flex">
-                    <i class="bi bi-clock icon"></i>
-                    <div>
-                        <h4>Opening Hours</h4>
-                        <p>
-                            <strong>Monday-Sunday:</strong> <span>6PM - 2AM</span><br>
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6">
-                    <h4>Follow Us</h4>
-                    <div class="social-links d-flex">
-                        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
-                        <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
-                        <a href="https://www.instagram.com/seripadi_decabin/" class="instagram"><i
-                                class="bi bi-instagram"></i></a>
-                        <a href="#" class="linkedin"><i class="bi bi-whatsapp"></i></a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="container copyright text-center mt-4">
-            <p>© <span>Copyright</span> <strong class="px-1 sitename">Yummy</strong> <span>All Rights Reserved</span>
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-telephone icon"></i>
+          <div>
+            <h4>Contact</h4>
+            <p>
+              <strong>Phone:</strong> <span>017-324 4866</span><br>
             </p>
-            <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you've purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
+          </div>
         </div>
 
-    </footer>
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-clock icon"></i>
+          <div>
+            <h4>Opening Hours</h4>
+            <p>
+              <strong>Monday-Sunday:</strong> <span>6PM - 2AM</span><br>
+            </p>
+          </div>
+        </div>
 
-    <!-- <script src="js/bookings_page.js"></script> -->
-    <script src="js/formActions.js" type="module"></script>
+        <div class="col-lg-3 col-md-6">
+          <h4>Follow Us</h4>
+          <div class="social-links d-flex">
+            <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a> -->
+            <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+            <a href="https://www.instagram.com/seripadi_decabin/" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-whatsapp"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Yummy</strong> <span>All Rights Reserved</span>
+      </p>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you've purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+
+  </footer>
+
+  <!-- <script src="js/bookings_page.js"></script> -->
+  <script src="js/formActions.js" type="module"></script>
 
 </body>
 
