admin confirm/cancel bookings functionality

--- a/public/require_login.html
+++ b/public/require_login.html
@@ -57,13 +57,17 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li> -->
+          <li><a href="/#book-a-table">Book a Table</a></li>
           <li><a href="/#contact">Contact</a></li>
           <li><a href="/users/bookings_page" class="active">My Bookings</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="/#book-a-table">Login</a>
+      <div>
+        <span class="mx-4">Welcome, Guest!</span>
+        <a class="btn-getstarted" href="/#book-a-table">Login</a>
+      </div>
 
     </div>
   </header>
